syntax = "proto3";
package exomonad.effects.copilot;

// Copilot effects for polling GitHub Copilot review comments.

// ============================================================================
// Common types
// ============================================================================

message CopilotComment {
  // File path the comment is on.
  string path = 1;
  // Line number (0 if not applicable).
  int64 line = 2;
  // Comment body text.
  string body = 3;
  // Diff hunk context.
  string diff_hunk = 4;
}

// ============================================================================
// WaitForCopilotReview - Poll for Copilot review comments
// ============================================================================

message WaitForCopilotReviewRequest {
  // PR number to check.
  int64 pr_number = 1;
  // Timeout in seconds (default: 300).
  int64 timeout_secs = 2;
  // Poll interval in seconds (default: 30).
  int64 poll_interval_secs = 3;
}

message WaitForCopilotReviewResponse {
  // Status: "found", "timeout", "error".
  string status = 1;
  // Copilot review comments found.
  repeated CopilotComment comments = 2;
}

// ============================================================================
// Service definition
// ============================================================================

service CopilotEffects {
  rpc WaitForCopilotReview(WaitForCopilotReviewRequest) returns (WaitForCopilotReviewResponse);
}
